Расставил элементы в модальном окне по макету

--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body class="page-body inner-page">
-    <header class="main-header">
+    <header class="main-header inner-header">
       <div class="wrapper">
         <nav class="main-navigation">
           <a class="main-header-logo" href="index.html"><img src="img/logos/nerds-logo.svg" width="160" height="65" alt="логотип студии нёрдс"></a>
@@ -36,7 +36,9 @@
             <a class="basket-link clear-list" href="#">Корзина</a>
           </div> 
         </nav>
+        <div class="inner-chapter">
         <h1>Магазин готовых шаблонов</h1>
+        </div>
       </div>
     </header>
     <main  class="container inner-filter">
@@ -197,7 +199,7 @@
               </ul>
             </section>
             <section class="page-switcher">
-              <ul class="clear-list">
+              <ul class="block-switcher clear-list">
                 <li>
                   <a class="button button-grey">1</a>
                 </li>
@@ -238,7 +240,7 @@
       <div class="wrapper">
         <div class="block-social">
           <section class="footer-social">
-            <ul class="clear-list">
+            <ul class="list-social clear-list">
               <li>
                 <a class="social-button" href="#">Вконтакте</a>
               </li>
