--- a/index.html
+++ b/index.html
@@ -185,15 +185,15 @@
           <section class="footer-social">
             <ul class="list-social clear-list">
                 <li>
-                  <a class="social-button first-social" href="#">Вконтакте</a>
+                  <a class="social-button general-social" href="#">Вконтакте</a>
                 </li>
                          
                 <li>
-                  <a class="social-button second-social" href="#">Фейсбук</a>
+                  <a class="social-button general-social" href="#">Фейсбук</a>
                 </li>
             
                 <li>
-                  <a class="social-button third-social" href="#">Инстаграм</a>
+                  <a class="social-button general-social" href="#">Инстаграм</a>
                 </li>
             </ul>
           </section>
@@ -212,15 +212,15 @@
         <div class="block-modal">
           <p class="modal-item first-form">
             <label for="modal-name">Ваше имя:</label>
-            <textarea id="modal-name" name="name" placeholder="Имя Фамилия"></textarea>
+            <input id="modal-name" type="text" name="name" placeholder="Имя Фамилия">
           </p>
           <p class="modal-item second-form">
             <label for="modal-email">Ваш email:</label>
-            <textarea id="modal-email" name="mail" placeholder="email@example.com"></textarea>
+            <input id="modal-email" type="email" name="mail" placeholder="email@example.com">
           </p>
           <p class="modal-item third-form">
             <label for="modal-text">Текст письма:</label>
-            <textarea id="modal-text" name="text" placeholder="В свободной форме"></textarea>
+            <textarea id="modal-text" name="text" placeholder="В свободной форме" rows="6"></textarea>
           </p>
           <button class="button button-form" type="submit">Отправить</button>
           <button class="modal-close" type="button">Закрыть</button> 
