--- a/catalog.html
+++ b/catalog.html
@@ -124,11 +124,11 @@
                 </li>
 
                 <li>
-                  <a href="#">Сортировка от большего к меньшему</a>
+                  <a class="visually-hidden" href="#">Сортировка от большего к меньшему</a>
                 </li>
 
                 <li>
-                  <a href="#">Сортировка от меньшего к большему</a>
+                  <a class="visually-hidden" href="#">Сортировка от меньшего к большему</a>
                 </li>
               </ul>
             </section>
