--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </li>
           </ul>       
           <div class="user-navigation">
-            <a class="basket-link clear-list" href="#">Корзина</a>
+            <a class="basket-link" href="#">Корзина</a>
           </div>        
         </nav>
         <div class="main-chapter">
@@ -41,12 +41,17 @@
           <p>
             Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.
           </p>
-          <a class="button" href="#">Узнать больше</a>
+          <a class="button button-main-chapter" href="#">Узнать больше</a>
+        </div>
+        <div class="circles">
+          <button class="general-circle circle-first" type="button"></button>
+          <button class="general-circle" type="button"></button>
+          <button class="general-circle" type="button"></button>
         </div>
       </div>
     </header>
     <main class="container"> 
-      <h2>Услуги</h2>
+      <h2 class="visually-hidden">Услуги</h2>
       <div class="wrapper">
         <div class="services">
           <section class="service-one">
@@ -57,7 +62,7 @@
             <p>
               Мир никогда не будет прежним<br>после того как увидит ваш сайт!
             </p>
-            <a class="button" href="#">Заказать</a>
+            <a class="button button-red" href="#">Заказать</a>
           </section>
           <section class="service-two">
             <p>
@@ -94,11 +99,11 @@
                 Веб-сайтов любой сложности
               </li>
 
-              <li>
+              <li class="info-item">
                 Мобильных приложений для IOS и Android
               </li>
 
-              <li>
+              <li class="info-item">
                 Слайдшоу и видео для корпоративных презентаций
               </li>
             </ul>  
@@ -134,28 +139,28 @@
         </div>
       </div>   
       <section class="clients">
-        <h2>Клиенты</h2>
+        <h2 class="visually-hidden">Клиенты</h2>
         <div class="wrapper">
           <ul class="clients-list clear-list">
-            <li class="clients-items"> 
+            <li class="clients-items first-client"> 
               <a href="https://htmlacademy.ru/intensive/htmlcss">
                 <img src="img/logos/logo_htmlacademy.svg" width="199" height="57" alt="логотип htmlacademy">
               </a>
             </li>
 
-            <li>
+            <li class="clients-items second-client">
               <a href="#">
                 <img src="img/logos/logo_borodinski.png" width="209" height="90" alt="логотип borodinski">
               </a>  
             </li>
 
-            <li>
+            <li class="clients-items third-client">
               <a href="#">
                 <img src="img/logos/logo_pink.png" width="185" height="52" alt="логотип pink">
               </a>
             </li>
 
-            <li> 
+            <li class="clients-items fourth-client"> 
               <a href="#">
                 <img src="img/logos/logo_mishka.png" width="173" height="84" alt="логотип mishka">
               </a>
@@ -166,34 +171,53 @@
     </main>
     <footer class="main-footer">
       <section class="contacts">
-        <h2>Контакты</h2>
+        <h2 class="visually-hidden">Контакты</h2>
         <img src="img/map.png" width="1440" height="416" alt="карта, отображающая расположение студии нёрдс">
-        <img src="img/map-marker.png" width="231" height="190" alt="маркер, указывающий точное расположении студии нёрдс">
-        <p class="naming">
-          nёrds design studio
-        </p>
-        <p>
-          наб. Реки Карповки,<br>5 лит П, Санкт-Петербург
-        </p>
-        <p>
-          <a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a>
-        </p>
-        <a class="button" href="#">Напишите нам</a>
+        <img class="map-marker" src="img/map-marker.png" width="231" height="190" alt="маркер, указывающий точное расположении студии нёрдс">
+        <div class="block-contacts">
+          <p class="naming">
+            nёrds design studio
+          </p>
+        <div class="address">
+          <p>
+            наб. Реки Карповки,<br>5 лит П, Санкт-Петербург
+          </p>
+          <p>
+            <a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a>
+          </p>
+        </div>
+          <a class="button button-contacts" href="#">Напишите нам</a>
+        </div>
       </section>
       <div class="wrapper">
         <div class="block-social">
           <section class="footer-social">
             <ul class="list-social clear-list">
               <li>
-                <a class="social-button general-social" href="#">Вконтакте</a>
+                <a class="social-button general-social" href="#">
+                  <span class="visually-hidden">Вконтакте</span>
+                  <svg width="27" height="15" viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M16.138 11.51C17.094 11.201 18.318 13.55 19.621 14.449C20.599 15.13 21.348 14.983 21.348 14.983L24.821 14.933C24.821 14.933 26.636 14.821 25.778 13.379C25.707 13.259 25.275 12.31 23.193 10.357C21.016 8.31404 21.311 8.64504 23.932 5.11304C25.529 2.96004 26.168 1.64504 25.968 1.08504C25.776 0.546037 24.603 0.686037 24.603 0.686037L20.69 0.713037C20.309 0.714037 19.986 0.832037 19.839 1.22804C19.836 1.23204 19.218 2.89404 18.394 4.30704C16.653 7.29604 15.958 7.45504 15.67 7.26804C15.009 6.83504 15.176 5.53104 15.176 4.60404C15.176 1.70704 15.608 0.499037 14.33 0.187037C13.903 0.0830374 13.591 0.0150374 12.502 0.00503741C11.11 -0.0159626 9.92797 0.00503743 9.25797 0.334037C8.81297 0.557037 8.47197 1.04604 8.67897 1.07404C8.93897 1.10904 9.52197 1.23404 9.83397 1.66004C10.235 2.21204 10.223 3.44904 10.223 3.44904C10.223 3.44904 10.452 6.86004 9.68297 7.28304C9.15497 7.57304 8.43297 6.98104 6.87997 4.26704C6.08697 2.87904 5.48797 1.34504 5.48797 1.34504C5.48797 1.34504 5.37197 1.06004 5.16197 0.904037C4.91197 0.719037 4.56197 0.660037 4.56197 0.660037L0.84797 0.684037C0.84797 0.684037 0.28997 0.700037 0.0849697 0.946037C-0.0970303 1.16404 0.0699697 1.61404 0.0699697 1.61404C0.0699697 1.61404 2.97897 8.49504 6.27297 11.961C9.29297 15.143 12.725 14.932 12.725 14.932H14.28C14.28 14.932 14.749 14.878 14.989 14.62C15.213 14.38 15.203 13.929 15.203 13.929C15.203 13.929 15.172 11.82 16.138 11.51Z" fill="white"/>
+                  </svg>   
+                </a>
               </li>
                         
               <li>
-                <a class="social-button general-social" href="#">Фейсбук</a>
+                <a class="social-button general-social" href="#">
+                  <span class="visually-hidden">Фейсбук</span>
+                  <svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white"/>
+                  </svg>
+                </a>
               </li>
           
               <li>
-                <a class="social-button general-social" href="#">Инстаграм</a>
+                <a class="social-button general-social" href="#">
+                  <span class="visually-hidden">Инстаграм</span>
+                  <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M3 0H18C19.65 0 21 1.35 21 3V18C21 19.65 19.65 21 18 21H3C1.35 21 0 19.65 0 18V3C0 1.35 1.35 0 3 0ZM14 10.5C14 8.57 12.43 7 10.5 7C8.57 7 7 8.57 7 10.5C7 12.43 8.57 14 10.5 14C12.43 14 14 12.43 14 10.5ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91015 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9986 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V3H14V7Z" fill="white"/>
+                  </svg>
+                </a>
               </li>
             </ul>
           </section>
@@ -220,10 +244,21 @@
           </p>
           <p class="modal-item third-form">
             <label for="modal-text">Текст письма:</label>
-            <textarea id="modal-text" name="text" placeholder="В свободной форме" rows="6"></textarea>
+            <textarea id="modal-text" name="text" placeholder="В свободной форме"></textarea>
           </p>
           <button class="button button-form" type="submit">Отправить</button>
-          <button class="modal-close" type="button">Закрыть</button> 
+          <a class="modal-close"><span class="visually-hidden">Закрыть</span>
+            <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0)">
+                <path d="M13.3391 10.5088L20.7163 3.13165C21.1056 2.74233 21.1056 2.1058 20.7163 1.71647L19.3011 0.300294C18.9118 -0.0890303 18.2752 -0.0890303 17.8859 0.300294L10.5088 7.67844L3.13163 0.301295C2.7423 -0.0880295 2.10577 -0.0880295 1.71645 0.301295L0.301271 1.71647C-0.0880537 2.1058 -0.0880537 2.74233 0.301271 3.13165L7.67842 10.5088L0.301271 17.8859C-0.0880537 18.2753 -0.0880537 18.9118 0.301271 19.3011L1.71745 20.7163C2.10678 21.1056 2.74331 21.1056 3.13263 20.7163L10.5098 13.3392L17.8869 20.7163C18.2762 21.1056 18.9128 21.1056 19.3021 20.7163L20.7173 19.3011C21.1066 18.9118 21.1066 18.2753 20.7173 17.8859L13.3391 10.5088Z" fill="#FB565A"/>
+              </g>
+              <defs>
+                <clipPath id="clip0">
+                  <rect width="21" height="21" fill="white"/>
+                </clipPath>
+              </defs>
+            </svg>
+          </a> 
         </div>
       </form>  
     </section>
