Добавил изменения в стилизации главной страницы

--- a/index.html
+++ b/index.html
@@ -37,21 +37,37 @@
           </div>        
         </nav>
         <div class="main-chapter">
-          <h1>Долго, дорого,<br>скрупулезно.</h1>
-          <p>
-            Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.
-          </p>
-          <a class="button button-main-chapter" href="#">Узнать больше</a>
+          <div class="slider-first"> 
+            <h1>Долго, дорого,<br>скрупулезно.</h1>
+            <p>
+              Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.
+            </p>
+            <a class="button button-main-chapter" href="#">Узнать больше</a>
+          </div>
+          <div class="slider-second visually-hidden">
+            <h1>Любим математику<br>как никто другой</h1>
+            <p>
+              Никакого креатива, только математические формулы<br>для расчета идеальных пропорций
+            </p>
+            <a class="button button-main-chapter" href="#">Узнать больше</a> 
+          </div>
+          <div class="slider-third visually-hidden">
+            <h1>Только ночь,<br>только хардкор</h1>
+            <p>
+              Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.
+            </p>
+            <a class="button button-main-chapter" href="#">Узнать больше</a>
+          </div>
+          <div class="circles">
+            <button class="general-circle circle-first" type="button"></button>
+            <button class="general-circle" type="button"></button>
+            <button class="general-circle" type="button"></button>
+          </div>
         </div>
-        <div class="circles">
-          <button class="general-circle circle-first" type="button"></button>
-          <button class="general-circle" type="button"></button>
-          <button class="general-circle" type="button"></button>
-        </div>
-      </div>
+      </div>      
     </header>
     <main class="container"> 
-      <h2 class="visually-hidden">Услуги</h2>
+      <h2 class="visually-hidden">Услуги</h2> 
       <div class="wrapper">
         <div class="services">
           <section class="service-one">
@@ -109,7 +125,7 @@
             </ul>  
           </section>
           <section class="features">
-            <figure>
+            <figure class="clear-list">
               <img src="img/nerds-illustration.png" width="360" height="208" alt="надпись nerds на фоне разноцветных шаров">
               <figcaption>с 2004 года Любим точность во всем:</figcaption>
             </figure>
@@ -142,26 +158,26 @@
         <h2 class="visually-hidden">Клиенты</h2>
         <div class="wrapper">
           <ul class="clients-list clear-list">
-            <li class="clients-items first-client"> 
-              <a href="https://htmlacademy.ru/intensive/htmlcss">
+            <li class="clients-items-one"> 
+              <a class="first-client" href="https://htmlacademy.ru/intensive/htmlcss">
                 <img src="img/logos/logo_htmlacademy.svg" width="199" height="57" alt="логотип htmlacademy">
               </a>
             </li>
 
-            <li class="clients-items second-client">
-              <a href="#">
+            <li class="clients-items-two">
+              <a class="second-client" href="#">
                 <img src="img/logos/logo_borodinski.png" width="209" height="90" alt="логотип borodinski">
               </a>  
             </li>
 
-            <li class="clients-items third-client">
-              <a href="#">
+            <li class="clients-items-three">
+              <a class="third-client" href="#">
                 <img src="img/logos/logo_pink.png" width="185" height="52" alt="логотип pink">
               </a>
             </li>
 
-            <li class="clients-items fourth-client"> 
-              <a href="#">
+            <li class="clients-items-four"> 
+              <a class="fourth-client" href="#">
                 <img src="img/logos/logo_mishka.png" width="173" height="84" alt="логотип mishka">
               </a>
             </li> 
