--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
           </div>        
         </nav>
         <div class="main-chapter">
-          <div class="slider-first"> 
+          <div class="slide-first header-slide"> 
             <h1>Долго, дорого,<br>скрупулезно.</h1>
             <p>
               Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.
             </p>
             <a class="button button-main-chapter" href="#">Узнать больше</a>
           </div>
-          <div class="slider-second visually-hidden">
+          <div class="slide-second header-slide visually-hidden">
             <h1>Любим математику<br>как никто другой</h1>
             <p>
               Никакого креатива, только математические формулы<br>для расчета идеальных пропорций
             </p>
             <a class="button button-main-chapter" href="#">Узнать больше</a> 
           </div>
-          <div class="slider-third visually-hidden">
+          <div class="slide-third header-slide visually-hidden">
             <h1>Только ночь,<br>только хардкор</h1>
             <p>
               Работать днем, как все? Мы против этого.<br>Ближе к полуночи работа только начинается.
@@ -59,7 +59,7 @@
             <a class="button button-main-chapter" href="#">Узнать больше</a>
           </div>
           <div class="circles">
-            <button class="general-circle circle-first" type="button"></button>
+            <button class="general-circle circle-active" type="button"></button>
             <button class="general-circle" type="button"></button>
             <button class="general-circle" type="button"></button>
           </div>
@@ -75,7 +75,7 @@
               <img src="img/illustration1.jpg" width="300" height="146" alt="открытый веб-сайт на компьютере">
             </p>
             <h2 class="general">Веб-сайты</h2>
-            <p>
+            <p class="general-paragraph">
               Мир никогда не будет прежним<br>после того как увидит ваш сайт!
             </p>
             <a class="button button-red" href="#">Заказать</a>
@@ -85,7 +85,7 @@
               <img src="img/illustration2.jpg" width="300" height="146" alt="два смартфона, на которых установлены приложения">
             </p>
             <h2 class="general">Приложения</h2>
-            <p>
+            <p class="general-paragraph">
               Покорите топ-10 приложений<br>в AppStore и Google Play
             </p>
             <a class="button button-green" href="#">Заказать</a>
@@ -95,7 +95,7 @@
               <img src="img/illustration3.jpg" width="300" height="146" alt="стенд с диаграммами">
             </p>
             <h2 class="general">Презентации</h2>
-            <p>
+            <p class="general-paragraph">
               Вы даже не подозреваете,<br>насколько вы изумительны!
             </p>
             <a class="button button-yellow" href="#">Заказать</a>
@@ -188,28 +188,30 @@
     <footer class="main-footer">
       <section class="contacts">
         <h2 class="visually-hidden">Контакты</h2>
-        <img src="img/map.png" width="1440" height="416" alt="карта, отображающая расположение студии нёрдс">
+        <img src="img/map.png" class="contacts-map" width="1440" height="416" alt="карта, отображающая расположение студии нёрдс">
         <img class="map-marker" src="img/map-marker.png" width="231" height="190" alt="маркер, указывающий точное расположении студии нёрдс">
-        <div class="block-contacts">
-          <p class="naming">
-            nёrds design studio
-          </p>
-        <div class="address">
-          <p>
-            наб. Реки Карповки,<br>5 лит П, Санкт-Петербург
-          </p>
-          <p>
-            <a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a>
-          </p>
-        </div>
-          <a class="button button-contacts" href="#">Напишите нам</a>
-        </div>
+        <div class="wrapper">
+          <div class="block-contacts">
+            <p class="naming">
+              nёrds design studio
+            </p>
+            <div class="address">
+              <p>
+                наб. Реки Карповки,<br>5 лит П, Санкт-Петербург
+              </p>
+              <p>
+                <a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a>
+              </p>
+            </div>
+            <a class="button button-contacts" href="#">Напишите нам</a>
+          </div>
+        </div> 
       </section>
       <div class="wrapper">
         <div class="block-social">
           <section class="footer-social">
             <ul class="list-social clear-list">
-              <li>
+              <li class="social-first">
                 <a class="social-button general-social" href="#">
                   <span class="visually-hidden">Вконтакте</span>
                   <svg width="27" height="15" viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -218,7 +220,7 @@
                 </a>
               </li>
                         
-              <li>
+              <li class="social-second">
                 <a class="social-button general-social" href="#">
                   <span class="visually-hidden">Фейсбук</span>
                   <svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
