--- a/catalog.html
+++ b/catalog.html
@@ -60,10 +60,10 @@
                   </div>
                   <div class="price-controls">
                     <label class="min-price">
-                      от <input type="number" name="min-price" value="0">
+                      от <input type="text" name="min-price" value="0">
                     </label>
                     <label class="max-price">
-                      до <input type="number" name="max-price" value="150000">
+                      до <input type="text" name="max-price" value="150 000">
                     </label>
                   </div>
                 </div>  
@@ -156,7 +156,7 @@
               <h2 class="visually-hidden">Товары:</h2>  
               <ul class="clear-list block-products">
                 <li class="catalog-item">
-                  <div class="block-sedona">
+                  <div class="block-sedona general-block-products">
                     <h3><a class="naming" href="#">Sedona</a></h3>
                     <p class="description text">
                       Информационный сайт<br>
@@ -172,7 +172,7 @@
                 </li>
 
                 <li class="catalog-item">
-                  <div class="block-pink">
+                  <div class="block-pink general-block-products">
                     <h3><a class="naming" href="#">Pink app</a></h3>
                     <p class="description text">
                       Продуктовый лендинг<br>
@@ -187,29 +187,29 @@
                   </p>
                 </li>
 
-                <li class="second-row">
+                <li class="catalog-item">
                   <a class="visually-hidden" href="#">Барбершоп"Бородинский"</a>
                   <p>
                     <img src="img/img-barbershop.jpg" width="358" height="578" alt="страница сайта Барбершопа Borodinski c преимуществами и выгодами для клиентов">
                   </p>
                 </li>
 
-                <li class="second-row">
+                <li class="catalog-item">
                   <a class="visually-hidden" href="#">Mishka</a>
                   <p>
                     <img src="img/img-mishka.jpg" width="358" height="578" alt="главная страница сайта Mishka с картинками вязаных изделий">
                   </p>
                 </li>
 
-                <li class="third-row">
+                <li class="catalog-item">
                   <a class="visually-hidden" href="#">Aplus</a>
                   <p>
                     <img src="img/img-aplus.jpg" width="358" height="578" alt="главная страница сайта Aplus с преимуществами и выгодами для клиентов">
                   </p>
                 </li>
 
-                <li class="third-row">
-                  <div class="block-kvast">
+                <li class="catalog-item">
+                  <div class="block-kvast general-block-products">
                     <h3><a class="naming" href="#">Кваст</a></h3>
                     <p class="description text">
                       Промо-сайт производителя<br>
