--- a/catalog.html
+++ b/catalog.html
@@ -123,8 +123,8 @@
             <section class="sorting">
               <h2 class="naming">Сортировать:</h2>
               <ul class="sorting-type clear-list">
-                <li class="sorting-type-current">
-                  <a href="#">По цене</a>
+                <li>
+                  <a class="sorting-type-current" href="#">По цене</a>
                 </li>
 
                 <li>
@@ -136,9 +136,9 @@
                 </li>
 
                 <li>
-                  <a class="arrow-down" href="#"><span class="visually-hidden">Сортировка от большего к меньшему</span>
-                    <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path class="sort-arrow-active" d="M5.5 10L0 0H11" fill="#A6A6A6"/>
+                  <a class="arrow-down arrow-active" href="#"><span class="visually-hidden">Сортировка от большего к меньшему</span>
+                    <svg width="11" height="10" viewBox="0 0 11 10" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M5.5 10L0 0H11"/>
                     </svg>
                   </a>
                 </li>
