Удалил картинку, исправил ошибки

--- a/catalog.html
+++ b/catalog.html
@@ -134,7 +134,9 @@
                 <li>
                   <a href="#">По названию</a>
                 </li>
-
+              </ul>  
+              
+              <ul class="sorting-arrow clear-list">
                 <li>
                   <a class="arrow-down arrow-active" href="#"><span class="visually-hidden">Сортировка от большего к меньшему</span>
                     <svg width="11" height="10" viewBox="0 0 11 10" xmlns="http://www.w3.org/2000/svg">
@@ -188,21 +190,48 @@
                 </li>
 
                 <li class="catalog-item">
-                  <a class="visually-hidden" href="#">Барбершоп"Бородинский"</a>
+                  <div class="block-pink general-block-products">
+                    <h3><a class="naming" href="#">Barbershop</a></h3>
+                    <p class="description text">
+                      Сайт салона красоты.<br>
+                      Для мужчин, да.
+                    </p>
+                    <p>
+                      <a class="button button-catalog" href="#">9 900 ₽</a>
+                    </p>
+                  </div>
                   <p>
                     <img src="img/img-barbershop.jpg" width="358" height="578" alt="страница сайта Барбершопа Borodinski c преимуществами и выгодами для клиентов">
                   </p>
                 </li>
 
                 <li class="catalog-item">
-                  <a class="visually-hidden" href="#">Mishka</a>
+                  <div class="block-pink general-block-products">
+                    <h3><a class="naming" href="#">Mishka</a></h3>
+                    <p class="description text">
+                      Интернет-магазин<br>
+                      вязаных игрушек
+                    </p>
+                    <p>
+                      <a class="button button-catalog" href="#">9 900 ₽</a>
+                    </p>
+                  </div>
                   <p>
                     <img src="img/img-mishka.jpg" width="358" height="578" alt="главная страница сайта Mishka с картинками вязаных изделий">
                   </p>
                 </li>
 
                 <li class="catalog-item">
-                  <a class="visually-hidden" href="#">Aplus</a>
+                  <div class="block-pink general-block-products">
+                    <h3><a class="naming" href="#">A plus</a></h3>
+                    <p class="description text">
+                      Лендинг курсов повышения<br> 
+                      квалификации
+                    </p>
+                    <p>
+                      <a class="button button-catalog" href="#">9 900 ₽</a>
+                    </p>
+                  </div>
                   <p>
                     <img src="img/img-aplus.jpg" width="358" height="578" alt="главная страница сайта Aplus с преимуществами и выгодами для клиентов">
                   </p>
